--- a/test.html
+++ b/test.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>day la test 1</div>
+    <div>day la test</div>
+    <div>day la test 2</div>
 </body>
 </html>
